syntax = "proto3";

package GoGoTalk.ProtoBuf;

message HeartbeatRequest {
	string UserID = 1;
}
